# BatteryRecorder

./: AGENTS.md  README.en.md  README.md
.github/workflows/: ci.yml
app/: build.gradle.kts
app/src/main/java/yangfentuozi/batteryrecorder/: App.kt
app/src/main/java/yangfentuozi/batteryrecorder/data/history/: DischargeRecordScanner.kt  HistoryCacheNaming.kt  HistoryCacheVersions.kt  HistoryRepository.kt  RecordDetailPowerStatsComputer.kt  SceneStatsComputer.kt  SyncUtil.kt
app/src/main/java/yangfentuozi/batteryrecorder/data/log/: LogRepository.kt
app/src/main/java/yangfentuozi/batteryrecorder/data/model/: ChartPoint.kt  RecordDetailChartPoint.kt
app/src/main/java/yangfentuozi/batteryrecorder/ui/: BatteryRecorderApp.kt
app/src/main/java/yangfentuozi/batteryrecorder/ui/guide/: StartupGuidePowerCalibrationDetector.kt  StartupGuideScreen.kt
app/src/main/java/yangfentuozi/batteryrecorder/ui/model/: CurrentRecordUiState.kt  RecordDetailUiModels.kt  SettingsActions.kt  SettingsUiProps.kt  SettingsUiState.kt
app/src/main/java/yangfentuozi/batteryrecorder/ui/viewmodel/: HistorySharedViewModel.kt  HistoryViewModel.kt  MainViewModel.kt  SettingsViewModel.kt
app/src/main/java/yangfentuozi/batteryrecorder/utils/: CaptureUtil.kt  EdgeToEdgeInsets.kt  RecordDetailCaptureUtil.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
server/src/main/java/yangfentuozi/batteryrecorder/server/: AppSourceDirObserver.kt  BinderSender.kt  Main.kt  Server.kt
server/src/main/jni/: CMakeLists.txt  dump_parser.cpp  starter.cpp
(+55 files in other folders)
